# PedestrainTracking

./: CMakeLists.txt  README.md  main.cpp  people.cpp  people.h
